--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <title>1 repositorio</title>
 </head>
 <body>
-    <h1>primer repositorio</h1>
+    <h1>Mi primer repositorio</h1>
     <div>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium a dignissimos quam nisi eaque, optio quos cum assumenda corrupti veritatis quis sed numquam, aliquid quae sunt unde, provident laboriosam quaerat!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quaerat et nemo laborum quam, reprehenderit perferendis, accusamus iusto consequatur in dolorem porro accusantium sunt possimus, ullam repudiandae consequuntur. Culpa, vero?</p>
